--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             margin-top:25px;
         }
         body {
-            background-color:black;
+            font-family: Arial, sans-serif;
+            background-color:#121212;
             display:flex;
             flex-direction:column;
             align-items: center;
